dfir_rs/tests/compile-fail-stable/surface_anti_join_badtypes.rs
../compile-fail/surface_anti_join_badtypes.rs